Added Spectator info, bugfixing, and general improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,6 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/Libraries/FindWDK/cmake")
 find_package(WDK REQUIRED)
 
-add_subdirectory(Libraries/common)
+add_subdirectory(Common)
 add_subdirectory(Garhal)
 add_subdirectory(GarhalController)
