--- a/GarhalController/settings.json
+++ b/GarhalController/settings.json
@@ -1,1 +1,71 @@
-{"AimbotBullets":100,"AimbotKey":88,"AimbotState":1,"AimbotTarget":1,"Bhop":false,"NoFlash":false,"Radar":false,"TriggerBot":false,"TriggerBotDelay":false,"TriggerBotDelayMax":15,"TriggerBotDelayMin":8,"TriggerBotKey":0,"Wallhack":true,"selectedWeaponIds":[false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false],"useVsync":false}
+{
+  "AimbotBullets": 100,
+  "AimbotKey": 88,
+  "AimbotState": 1,
+  "AimbotTarget": 1,
+  "Bhop": false,
+  "NoFlash": false,
+  "Radar": false,
+  "TriggerBot": false,
+  "TriggerBotDelay": false,
+  "TriggerBotDelayMax": 15,
+  "TriggerBotDelayMin": 8,
+  "TriggerBotKey": 0,
+  "Wallhack": true,
+  "selectedWeaponIds": [
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false,
+    false
+  ],
+  "useVsync": false
+}
